# eos_client

./: .gitignore  Action_OpenInventory.cpp  Action_OpenInventory.h  ActionsDescription.h  Application.cpp  Application.h  ApplicationGUI.cpp  ApplicationGUI.h  AssemblyDependencies1.dgml  BmpLoader.cpp  BmpLoader.h  Definiton.h  Delegate.h  Description_GUI.h  EoS.cpp  EoS.sln  EoS.vcxproj  EoS.vcxproj.filters  Event.h  EventBase.cpp  EventBase.h  FileSystem.cpp  FileSystem.h  FreeType.h  GUI_ActionButton.cpp  GUI_ActionButton.h  GUI_ActionManager.cpp  GUI_ActionManager.h  GUI_ActionPanel.cpp  GUI_ActionPanel.h  GUI_Container.cpp  GUI_Container.h  GUI_Inventory.cpp  GUI_Inventory.h  GUI_Item.cpp  GUI_Item.h  GUI_ItemButton.cpp  GUI_ItemButton.h  GUI_Layer.cpp  GUI_Layer.h  (+69 more)
Debug/: CL.read.1.tlog  CL.write.1.tlog  EoS.ilk  EoS.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
cmake_build/common/: game.cmake
cmake_build/linux/: CMakeLists.txt
cmake_build/win/: CMakeLists.txt  build.bat  gen.bat
docs/: Mechanics.txt
game/: AI.cpp  AI.h  Action.cpp  Action.h  ActionManager.cpp  ActionManager.h  Action_controller.cpp  Action_controller.h  Application.cpp  Application.h  ApplicationGUI.cpp  ApplicationGUI.h  BmpLoader.h  Definition.cpp  Definiton.h  Description_GUI.h  Effect.cpp  Effect.h  EoS.cpp  Event.h  FOV.cpp  FOV.h  FOV_light.cpp  FOV_light.h  FileSystem.cpp  FileSystem.h  GameMap.cpp  GameMap.h  GameObject.cpp  GameObject.h  GameObjectProperty.cpp  GameObjectProperty.h  Game_algorithm.cpp  Game_algorithm.h  Game_log.cpp  Game_log.h  Game_object_manager.cpp  Game_object_manager.h  GraphicalController.cpp  GraphicalController.h  (+49 more)
game/graphics/: GUI_ActionButton.cpp  GUI_ActionButton.h  GUI_ActionManager.cpp  GUI_ActionManager.h  GUI_ActionPanel.cpp  GUI_ActionPanel.h  GUI_Action_bar.cpp  GUI_Action_bar.h  GUI_Button_list.cpp  GUI_Button_list.h  GUI_Container.cpp  GUI_Container.h  GUI_Controller.cpp  GUI_Controller.h  GUI_Description_window.cpp  GUI_Description_window.h  GUI_Inventory.cpp  GUI_Inventory.h  GUI_Item.cpp  GUI_Item.h  GUI_ItemButton.cpp  GUI_ItemButton.h  GUI_Layer.cpp  GUI_Layer.h  GUI_MapViewer.cpp  GUI_MapViewer.h  GUI_MiniMap.cpp  GUI_MiniMap.h  GUI_Object.cpp  GUI_Object.h  GUI_PopMenu.cpp  GUI_PopMenu.h  GUI_Text.cpp  GUI_Text.h  GUI_TextBox.cpp  GUI_TextBox.h  GUI_Timer.cpp  GUI_Timer.h  GUI_Window.cpp  GUI_Window.h  (+14 more)
game/impact/: Effect.cpp  Effect.h  Impact_copy_chance.cpp  Impact_copy_chance.h  Impact_random_value.cpp  Impact_random_value.h  action_list.cpp  action_list.h  activator.cpp  activator.h  all_effects.h  can_transfer_object.cpp  can_transfer_object.h  equippable.cpp  equippable.h  fast_move.cpp  fast_move.h  forwards.h  instruction_arg_extract.cpp  instruction_arg_extract.h  instruction_check_owner_type.cpp  instruction_check_owner_type.h  instruction_check_part_type.cpp  instruction_check_part_type.h  instruction_check_tag.cpp  instruction_check_tag.h  instruction_game_owner.cpp  instruction_game_owner.h  instruction_get_owner.cpp  instruction_get_owner.h  instruction_get_owner_top.cpp  instruction_get_owner_top.h  instruction_result.cpp  instruction_result.h  instruction_slot_link.cpp  instruction_slot_link.h  instruction_slot_parameter.cpp  instruction_slot_parameter.h  interaction_addon.cpp  interaction_addon.h  (+36 more)
game/serialization/: gui_atlas_reader.cpp  gui_atlas_reader.h  i_json_deserializable.h  i_json_serializable.h  json_game_loader.cpp  json_game_loader.h  json_game_saver.cpp  json_game_saver.h  json_helpers.cpp  json_helpers.h  member_map.h  reader.cpp  reader.h  type_info.h  visitor.h  writer.cpp  writer.h
game/utils/: Logger.cpp  Logger.h  bytearray.h  winlog.h
lib/win/x64/: freetype.lib
lib/win/x64/Debug/: freetype.lib  freetype27.lib  glbindingd.lib  glew32d.lib  libpng16.lib
lib/win/x64/Release/: freetype.lib  freetype27.lib  glbinding.lib  glew32.lib
lib/win/x86/: freetype.lib
lib/win/x86/Debug/: freetype.lib  freetype27d.lib  glew32d.lib  libpng16.lib
lib/win/x86/Release/: freetype.lib  freetype27.lib  glew32.lib  libpng16.lib
platform/win/: EoS.cpp  Renderer.cpp  Renderer.h
resources/: Blur.fsh  Blur.vsh  EoS_HorizontalBlur - copy.fsh  EoS_HorizontalBlur.fsh  EoS_Light.fsh  EoS_Light.vsh  EoS_Object.fsh  EoS_Render.fsh  EoS_Render.vsh  EoS_VerticalBlur.fsh  Light.fsh  Light.vsh  Object.fsh  Object.vsh  Render.fsh  Render.vsh  Thumbs.db
resources/Configs/: Objects _old.txt  Objects.json  Objects.txt  Test_Objects.json  Tiles.txt  gui.json
resources/Saves/: save.json  save.txt  save_01.txt  save_02.txt  test.json
resources/Shaders/: EoS_HorizontalBlur.fsh  EoS_Light.fsh  EoS_Light.vsh  EoS_Render.fsh  EoS_Tile.fsh  EoS_Tile_alpha.fsh  EoS_Tile_atlas.fsh  EoS_Tile_atlas.vsh  EoS_Tile_hide.fsh  EoS_blur.vsh  EoS_blur_horizontal.fsh  EoS_blur_vertical.fsh  EoS_mask.fsh  EoS_mask.vsh  EoS_mask2.fsh  EoS_mask2.vsh  tile_atlas.frag  tile_atlas.vert  tile_atlas_fragment.glsl  tile_atlas_vertex.glsl  ui.frag  ui.vert  ui_fragment.glsl  ui_vertex.glsl
resources/Tiles/: Atlas1.sps  Thumbs.db  atlas_1.json  bat.tif  bear.tif  big_corpse.tif  bones.tif  corpse.tif  fountain.imsq  wolf.tif
resources/Tiles/DarkEye/: DarkEye.sps  DarkEye.xml
resources/Tiles/EoS3D/: Camera.swp  DarkEye.SLDPRT  Human.SLDPRT  Room.SLDASM  Room_DarkEye.SLDASM  Wall.SLDPRT  Wall2.SLDPRT  Wall3.SLDPRT  _Wall.SLDPRT  floor.SLDPRT
resources/Tiles/EoS3D/3ds_max/: Knight.max  Knight2.max  deadeye.max
resources/Tiles/EoS3D/warder/Bretonnian_Knight_and_Armored_Warrior/: Bretonnian_Knight_and_Armored_Warrior.stl
resources/Tiles/gui/: gui.json  gui.sps
resources/Tiles/human/: Human.sps  Human.xml
resources/Tiles/psd/: Stena.psd  Thumbs.db  dver.psd  dym.psd  fakel.psd  zelye.psd  zmeya.psd
